Added pattern-matching in User servlet