@@ -115,6 +115,9 @@
                     <version>3.8.0</version>
                     <configuration>
                         <release>13</release>
+                        <compilerArgs>
+                            --enable-preview
+                        </compilerArgs>
                     </configuration>
                 </plugin>
             </plugins>
